fix Button VTA issue on small screen

--- a/css/recommendation.css
+++ b/css/recommendation.css
@@ -77,7 +77,7 @@
 
 .swiper-buttons-container-1 {
   position: relative;
-  top: -100px;
+  top: -90px;
   left: 0%;
   float: right;
   gap: 20px;
